@@ -12,7 +12,7 @@ FastFlix's is MIT licenced.
 * mistune (BSD)
 * coloredlogs (MIT)
 * colorama (BSD)
-* PySide2 (LGPLv3)
+* PySide6 (LGPLv3)
 
 # Used for creating binary
 * PyInstaller (Modified GPL)
@@ -257,7 +257,7 @@ to indicate the copyright and license terms:
 
  The full license is in the file COPYING.txt, distributed with this software.
 
-## PySide2
+## PySide6
 
 ### GNU LESSER GENERAL PUBLIC LICENSE
 
