@@ -6899,3 +6899,27 @@ Please consider supporting FastFlix with a one time contribution!:
   por: Por favor, considere apoiar FastFlix com uma contribuição única!
   swe: Överväg att stödja FastFlix med ett engångsbidrag!
   pol: Proszę rozważyć wsparcie FastFlix jednorazową wpłatą!
+Default Source Folder:
+  eng: Default Source Folder
+  deu: Standard-Quellordner
+  fra: Dossier source par défaut
+  ita: Cartella sorgente predefinita
+  spa: Carpeta de origen por defecto
+  zho: 默认的源文件夹
+  jpn: デフォルトのソースフォルダ
+  rus: Исходная папка по умолчанию
+  por: Pasta da fonte por defeito
+  swe: Standardkällmapp för källan
+  pol: Domyślny folder źródłowy
+No Default Source Folder:
+  eng: No Default Source Folder
+  deu: Kein Standard-Quellordner
+  fra: Pas de dossier source par défaut
+  ita: Nessuna cartella di origine predefinita
+  spa: No hay carpeta de origen por defecto
+  zho: 没有默认的源文件夹
+  jpn: デフォルトのソースフォルダなし
+  rus: Нет Исходная папка по умолчанию
+  por: Sem pasta de origem por defeito
+  swe: Ingen standardkällmapp
+  pol: Nie Domyślny folder źródłowy
