@@ -1,2 +1,0 @@
-[pytest]
-qt_api=pyside2
