@@ -1,2 +1,1 @@
 pytest
-pytest-qt
