@@ -1,12 +1,12 @@
-appdirs~=1.4.4
-colorama~=0.4.4
+appdirs~=1.4
+colorama~=0.4
 coloredlogs~=15.0
 iso639-lang==0.0.9
-mistune~=0.8.4
-pathvalidate~=2.4.1
-psutil~=5.8.0
-pydantic~=1.8.2
-PySide6~=6.3.1
-python-box[all]~=6.0.1
-requests~=2.25.1
+mistune~=0.8
+pathvalidate~=2.4
+psutil~=5.9
+pydantic~=1.8
+PySide6~=6.3
+python-box[all]~=6.0
+requests~=2.25
 reusables~=0.9.6
