@@ -3,6 +3,9 @@
 ## Version 5.0.0
 
 * Adding new GUI backend PySide6
+* Adding default source directory (thanks to Battlestar1965)
+* Adding hidden tabs for things that are not supported for a certain codec
+* Fixing settings panel would always want a restart if any paths to executables were filled on windows
 * Removing support and builds for Windows 7 and 8
 * Removing support and builds for MacOS 10
 
